Add initial code
Co-Authored-By: Johannes Rabauer <8188460+JohannesRabauer@users.noreply.github.com>
Co-Authored-By: Moritz Mitlmeier <99164988+MMitlmeier@users.noreply.github.com>